syntax = "proto3";
package proto;

import "common.proto";

message Data {
	uint64 term = 1;
	uint64 index = 2;
	uint64 clusterID = 3;

	uint64 maxNodeID = 4;
	uint64 maxShardGroupID = 5;
	uint64 maxShardID = 6;

	repeated NodeInfo metaNodes = 7;
	repeated NodeInfo dataNodes = 8;

	repeated DatabaseInfo databases = 9;

	repeated UserInfo users = 10;
}

message NodeInfo {
	uint64 id = 1;
	string address = 2;
}

message DatabaseInfo {
	string name = 1;
	string defaultRetentionPolicy = 2;
	repeated RetentionPolicyInfo retentionPolicies = 3;
	repeated ContinuousQueryInfo continuousQueries = 4;
}

message RetentionPolicySpec {
	Str name = 1;
	I64 duration = 2;
	I64 shardGroupDuration = 3;
	I64 replicaN = 4;
}

message RetentionPolicyInfo {
	string name = 1;
	int64 duration = 2;
	int64 shardGroupDuration = 3;
	int64 replicaN = 4;
	repeated ShardGroupInfo shardGroups = 5;
	repeated SubscriptionInfo subscriptions = 6;
}

message ShardGroupInfo {
	uint64 ID = 1;
	int64 startTime = 2;
	int64 endTime = 3;
	int64 deletedAt = 4;
	repeated ShardInfo shards = 5;
	int64 truncatedAt = 6;
}

message ShardInfo {
	uint64 ID = 1;
	repeated ShardOwner owners = 2;
}

message SubscriptionInfo{
	string name = 1;
	string mode = 2;
	repeated string Destinations = 3;
}

message ShardOwner {
	uint64 nodeID = 1;
}

message ContinuousQueryInfo {
	string mame = 1;
	string query = 2;
}

message UserInfo {
	string name = 1;
	string hash = 2;
	bool admin = 3;
	repeated UserPrivilege privileges = 4;
}

message UserPrivilege {
	string database = 1;
	int32 privilege = 2;
}
